fixed styling issue causing horizontal scrolling

--- a/client/src/components/Header/Header.scss
+++ b/client/src/components/Header/Header.scss
@@ -22,7 +22,6 @@ li {
   overflow: hidden;
   background-color: white;
   height: fit-content;
-  width: 100%;
   min-height: 6rem;
   padding: 0.5rem;
 
